create shared por tags and added hex color property
