# src/Esquio.UI.Api.Shared/Models/Tags/Add/AddTagRequest.cs
@@ -1,17 +1,21 @@
 ﻿using MediatR;
+using System;
 
-namespace Esquio.UI.Api.Scenarios.Tags.Add
+namespace Esquio.UI.Api.Shared.Models.Tags.Add
 {
     public class AddTagRequest : IRequest
     {
         protected AddTagRequest() { }
 
-        public AddTagRequest(string tag)
+        public AddTagRequest(string tag,string hexColor = null)
         {
-            Tag = tag;
+            Tag = tag ?? throw new ArgumentNullException(nameof(tag));
+            HexColor = hexColor;
         }
 
         public string Tag { get; set; }
+
+        public string HexColor { get; set; }
 
         internal string ProductName { get; set; }
 
